--- a/server/views/hardware_profiles/show.html.haml
+++ b/server/views/hardware_profiles/show.html.haml
@@ -1,11 +1,11 @@
 =header "Hardware profiles"
-=subheader @hardware_profile.name
+=subheader @hardware_profile.name || @hardware_profile.id
 
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'd'}
     %li{ :'data-role' => 'list-divider'} Name
     %li
-      %p{ :'data-role' => 'fieldcontain'}=@hardware_profile.name
+      %p{ :'data-role' => 'fieldcontain'}=@hardware_profile.name || @hardware_profile.id
     - @hardware_profile.each_property do |p|
       %li{ :'data-role' => 'list-divider'} #{p.name.to_s.titlecase}
       %li
