Core: Replaced api_url_for with url_for
* The api_url_for does not add any extra value to original
  'url_for' helper. Mixing there two helper in views cause
  confusion.

Signed-off-by: Michal fojtik <mfojtik@redhat.com>

--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -5,7 +5,7 @@
   %ul{ :'data-role' => :listview, :'data-inset' => 'true'}
     - supported_collections do |c|
       %li
-        %a{ :href => api_url_for(c.collection_name),  :'data-icon' => "arrow-r"}=c.collection_name.to_s.gsub('_', ' ').titlecase
+        %a{ :href => url_for(c.collection_name),  :'data-icon' => "arrow-r"}=c.collection_name.to_s.gsub('_', ' ').titlecase
 
 
 - unless Deltacloud::Drivers.driver_config.nil?
