--- a/server/views/cimi/cloudEntryPoint/index.xml.haml
+++ b/server/views/cimi/cloudEntryPoint/index.xml.haml
@@ -1,6 +1,6 @@
 !!!XML
 %CloudEntryPoint{ :xmlns => CMWG_NAMESPACE }
-  %uri= api_url_for("/cloudEntryPoint")
+  %uri= url_for("/cloudEntryPoint")
   %name cloud entry point
   %description cloud entry point
   %created= Time.new.getutc.to_s
