--- a/server/views/docs/index.html.haml
+++ b/server/views/docs/index.html.haml
@@ -5,7 +5,7 @@
   %ul{ :'data-role' => :listview, :'data-inset' => 'true'}
     - collections.keys.sort_by { |k| k.to_s }.each do |collection|
       %li
-        %a{:href => api_url_for("docs/#{collection}"), :'data-ajax' => 'false'}
+        %a{:href => url_for("docs/#{collection}"), :'data-ajax' => 'false'}
           %h3=collection.to_s.capitalize.tr('_', ' ')
           %p=collections[collection].description
 
