--- a/server/views/error.html.haml
+++ b/server/views/error.html.haml
@@ -26,7 +26,7 @@
         %div{ 'data-role' => :navbar}
           %ul
             %li
-              %a{ :'data-icon' => 'home', :href => api_url_for(''), :'data-ajax' => 'false'} Home
+              %a{ :'data-icon' => 'home', :href => url_for(''), :'data-ajax' => 'false'} Home
             %li=link_to_format(:xml)
             %li=link_to_format(:json)
         %div{ 'data-role' => :header, 'data-theme' => 'a' }
