--- a/server/views/cimi/machine_images/show.html.haml
+++ b/server/views/cimi/machine_images/show.html.haml
@@ -63,7 +63,7 @@
 :javascript
   function fixupXml(theNode) {
     var xmlData = "<?xml version='1.0' encoding='utf-8' ?>";
-    xmlData += "<" + $(theNode.form).attr("xmlRootNode").value + " xmlns='http://www.dmtf.org/cimi'>";
+    xmlData += "<" + $(theNode.form).attr("xmlRootNode").value + " xmlns='http://schemas.dmtf.org/cimi/1'>";
     xmlData += getStandardData(theNode);
     xmlData += "<imageLocation href='" + $(theNode.form).attr("imageLocation").value + "' />";
     xmlData += "<imageData>" + $(theNode.form).attr("imageData").value + "</imageData>";
