Core: Expand API features in entrypoint
* Added :rel attribute to describe what operation given feature extend
* Added list of params, so clients can discover them

Signed-off-by: Michal fojtik <mfojtik@redhat.com>

--- a/server/views/api/show.xml.haml
+++ b/server/views/api/show.xml.haml
@@ -2,6 +2,9 @@
   - @collections.each do |c|
     %link{ :rel => c.collection_name, :href => self.send(:"#{c.collection_name}_url")}
       - c.features.select { |f| driver.class.has_feature?(c.collection_name, f.name) }.each do |f|
-        %feature{ :name => f.name }
-          - driver.class.constraints(:collection => c.collection_name, :feature => f.name).each do |name, value|
-            %constraint{ :name => name }=value
+        - f.operations.each do |operation|
+          %feature{ :name => f.name, :rel => operation.name }
+            - operation.params_array.each do |param|
+              %param{ :name => param.name}
+            - driver.class.constraints(:collection => c.collection_name, :feature => f.name).each do |name, value|
+              %constraint{ :name => name }=value
