--- a/server/views/images/show.xml.haml
+++ b/server/views/images/show.xml.haml
@@ -1,9 +1,14 @@
 - unless defined?(partial)
   !!! XML
 %image{:href => image_url(@image.id), :id => @image.id}
-  - @image.attributes.select{ |attr| ![:id, :hardware_profiles].include?(attr) }.each do |attribute|
-    - haml_tag(attribute, :<) do
-      - haml_concat @image.send(attribute)
+  %name=@image.name
+  %description=@image.description
+  %owner_id=@image.owner_id
+  %architecture=@image.architecture
+  - if @image.state
+    %state=@image.state
+  - if @image.creation_time
+    %creation_time=@image.creation_time
   - if @image.hardware_profiles
     %hardware_profiles
       - @image.hardware_profiles.each do |profile|
