--- a/server/views/images/show.xml.haml
+++ b/server/views/images/show.xml.haml
@@ -12,7 +12,7 @@
   - if @image.hardware_profiles
     %hardware_profiles
       - @image.hardware_profiles.each do |profile|
-        %hardware_profile{ :href => hardware_profile_url(profile.name), :id => profile.name, :rel => :hardware_profile }
+        %hardware_profile{ :href => hardware_profile_url(profile.id), :id => profile.id, :rel => :hardware_profile }
   %actions
     %link{ :rel => 'create_instance', :method => :post, :href => "#{instances_url};image_id=#{@image.id}"}
     %link{ :rel => 'destroy_image', :method => :delete, :href => "#{destroy_image_url(@image.id)}" }
